# kadwsettings

./: .gitignore  ColorDelegate.qml  CustomStyleDelegate.qml  KAdwSettings.desktop  LICENSE.txt  PresetSchema.js  README.md  backend.py  color.py  install.sh  kgradience.pyproject  main.py  main.qml  pyproject.toml
presets/: breeze-dark.json  breeze-light.json  qogir-dark.json
src/: .pyproject  AboutPage.qml  Actions.qml  ColorDelegate.qml  CommonActions.qml  CustomStylesDelegate.qml  color.py  main.py  main.qml  preset.py  qmldir  schema.py
