[tool.poetry]
name = "kadwsettings"
description = "KDE Adwaita Settings"
license = "MIT"
version = "0.1.0"
authors = ["houruinus <houruinus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tinycss2 = "*"
PySide6 = "^6.7"

[tool.pyright]
typeCheckingMode = "basic"
reportRedeclaration = false
reportArgumentType = false
